--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ concurrency:
 
 env:
   CACHE_VERSION: v1  # Increment to bust cache when needed
+  GO_CACHE_KEY: go-mod-${{ runner.os }}-${{ hashFiles('**/go.sum') }}-${{ env.CACHE_VERSION }}
 
 jobs:
   # ========================================
@@ -27,12 +28,20 @@ jobs:
     - name: 📥 Checkout
       uses: actions/checkout@v4
 
+    - name: 📦 Cache Go Modules
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ env.GO_CACHE_KEY }}
+
     - name: 🐹 Setup Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23.x'  # Force Go 1.23 latest patch
-        check-latest: true    # Always grab the newest patch release
-        cache: true           # Handles ~/.cache/go-build and ~/go/pkg/mod
+        go-version: '1.23.x'
+        check-latest: true
+        cache: false  # Using our own shared cache
 
     - name: 📁 Cache Tools
       uses: actions/cache@v4
@@ -64,32 +73,26 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        go-version: ['1.23', '1.24']
-        include:
-          - os: ubuntu-latest
-            coverage: true
+        go-version: ['1.23.x', '1.24.x']
 
     steps:
     - name: 📥 Checkout
       uses: actions/checkout@v4
 
-    - name: 🐹 Setup Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: ${{ matrix.go-version }}
-        cache: true
-
-    - name: 📦 Cache Go Modules
+    - name: 📦 Restore Go Modules Cache
       uses: actions/cache@v4
       with:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-test-${{ matrix.go-version }}-${{ env.CACHE_VERSION }}-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-test-${{ matrix.go-version }}-${{ env.CACHE_VERSION }}-
-          ${{ runner.os }}-go-test-${{ matrix.go-version }}-
-          ${{ runner.os }}-go-test-
+        key: ${{ env.GO_CACHE_KEY }}
+
+    - name: 🐹 Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ${{ matrix.go-version }}
+        check-latest: true
+        cache: false  # Using our own shared cache
 
     - name: 🔧 Install Tools
       run: make install-tools
@@ -98,11 +101,11 @@ jobs:
       run: make test
 
     - name: 📊 Generate Coverage Report
-      if: matrix.coverage && matrix.go-version == '1.23'
+      if: matrix.go-version == '1.23.x'
       run: make testcov
-    
+
     - name: 📈 Upload Coverage Report
-      if: matrix.coverage && matrix.go-version == '1.23'
+      if: matrix.go-version == '1.23.x'
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
