--- a/adapter/httprouteropenapi/testdata/petstore.yaml
+++ b/adapter/httprouteropenapi/testdata/petstore.yaml
@@ -134,6 +134,7 @@ paths:
         name: petId
         required: true
         schema:
+          format: int64
           type: integer
       requestBody:
         content:
@@ -145,7 +146,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DtoApiResponse'
+                $ref: '#/components/schemas/DtoAPIResponse'
           description: OK
       security:
       - petstore_auth:
@@ -415,7 +416,7 @@ paths:
       - user
 components:
   schemas:
-    DtoApiResponse:
+    DtoAPIResponse:
       properties:
         code:
           type: integer
