--- a/adapter/muxopenapi/testdata/petstore.yaml
+++ b/adapter/muxopenapi/testdata/petstore.yaml
@@ -129,6 +129,7 @@ paths:
         name: petId
         required: true
         schema:
+          format: int64
           type: integer
       requestBody:
         content:
@@ -140,7 +141,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DtoApiResponse'
+                $ref: '#/components/schemas/DtoAPIResponse'
           description: OK
       security:
       - petstore_auth:
@@ -410,7 +411,7 @@ paths:
       - user
 components:
   schemas:
-    DtoApiResponse:
+    DtoAPIResponse:
       properties:
         code:
           type: integer
