--- a/testdata/petstore_31.yaml
+++ b/testdata/petstore_31.yaml
@@ -153,7 +153,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DtoApiResponse'
+                $ref: '#/components/schemas/DtoAPIResponse'
           description: OK
       security:
       - petstore_auth:
@@ -406,7 +406,7 @@ paths:
       - user
 components:
   schemas:
-    DtoApiResponse:
+    DtoAPIResponse:
       properties:
         code:
           type: integer
